@@ -571,6 +571,6 @@ table.g-albums-table .g-albumdesc-cell {
 	font-size: 11px;
 	padding: 2px;
 	background: #eee;
-    border: 1px solid #ccc;
-    -moz-border-radius: 5px;
+	border: 1px solid #ccc;
+	-moz-border-radius: 5px;
 }
