@@ -1,3 +1,13 @@
+2007-04-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b55
+
+ * Fix: Quotes in album title broke subalbumtree
+
+ * Change: Unified adminbar links.
+
+ Thanks to AndrewVasilyev from forums for reporting this
+
+ * Temp fix: Removed KOI8-R from supported charsets for htmlentities.
+
 2007-03-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b54
 
  * Fix: Htmlfix in b53 broke image area links.
